[package]
name = "websocketosaurus-thaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.9", features = ["csr"] }
thaw = { version = "0.2.3", features = ["csr"] }
leptos_meta = { version = "0.6.9", features = ["csr"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
leptos-use = "0.10.4"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
#web-sys = "0.3"
url = "2.5.0"
console_error_panic_hook = "0.1.7"

shv = { git = "https://github.com/silicon-heaven/shv-rs.git", branch = "master" }